fix: fixed logic error of convergence and added comments to explain code